--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -19,7 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:popupTheme="@style/Widget.AppCompat.PopupMenu.Overflow"
-            app:titleCentered="true" />
+            app:titleCentered="true"
+            android:background="@color/color_variant"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
