--- a/app/src/main/res/layout/item_course_home.xml
+++ b/app/src/main/res/layout/item_course_home.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <data>
-        <variable
-            name="viewModel"
-            type="com.sage.learnify.ui.home.HomeFragmentViewModel" />
-    </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/course_image_cont"
@@ -27,7 +21,7 @@
                 android:id="@+id/item_course_home_image"
                 android:layout_width="129dp"
                 android:layout_height="109dp"
-                app:imageUrl="@{viewModel.status.image_125_H}"
+                android:src="@drawable/item_course_image"
                 android:scaleType="centerCrop" />
         </androidx.cardview.widget.CardView>
 
@@ -37,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/nunito_semibold"
-            android:text="@{viewModel.status.title}"
+            android:text="Title"
             android:textColor="#012032"
             android:textSize="11sp"
             app:layout_constraintEnd_toEndOf="@+id/course_image_cont"
@@ -45,4 +39,3 @@
             app:layout_constraintTop_toBottomOf="@id/course_image_cont" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
