--- a/app/src/main/res/layout/item_course_home.xml
+++ b/app/src/main/res/layout/item_course_home.xml
@@ -1,41 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="16dp"
+    android:layout_marginEnd="16dp"
+    android:background="?attr/selectableItemBackground">
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/course_image_cont"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp">
+        app:cardCornerRadius="8dp"
+        app:cardElevation="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/course_image_cont"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="0dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+        <ImageView
+            android:id="@+id/item_course_home_image"
+            android:layout_width="129dp"
+            android:layout_height="109dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/item_course_image" />
+    </androidx.cardview.widget.CardView>
 
-            <ImageView
-                android:id="@+id/item_course_home_image"
-                android:layout_width="129dp"
-                android:layout_height="109dp"
-                android:src="@drawable/item_course_image"
-                android:scaleType="centerCrop" />
-        </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/item_course_home_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/nunito_semibold"
+        android:text="Title"
+        android:textColor="#012032"
+        android:textSize="11sp"
+        app:layout_constraintEnd_toEndOf="@+id/course_image_cont"
+        app:layout_constraintStart_toStartOf="@+id/course_image_cont"
+        app:layout_constraintTop_toBottomOf="@id/course_image_cont" />
 
-        <TextView
-            android:id="@+id/item_course_home_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:fontFamily="@font/nunito_semibold"
-            android:text="Title"
-            android:textColor="#012032"
-            android:textSize="11sp"
-            app:layout_constraintEnd_toEndOf="@+id/course_image_cont"
-            app:layout_constraintStart_toStartOf="@+id/course_image_cont"
-            app:layout_constraintTop_toBottomOf="@id/course_image_cont" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
