--- a/app/src/main/res/layout/fragment_course_detail.xml
+++ b/app/src/main/res/layout/fragment_course_detail.xml
@@ -104,8 +104,10 @@
             android:layout_marginStart="16dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:orientation="vertical"
+            tools:listitem="@layout/item_course_instructor"
+            tools:itemCount="5"
             android:layout_marginEnd="16dp"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="16dp"/>
 
     </LinearLayout>
 
